--- a/templates/home.html
+++ b/templates/home.html
@@ -35,115 +35,55 @@
 
 
 
-        <form action="\predict" method="post">
+        <form action="{{ url_for('predict_datapoint')}}" method="post">
 
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Departure Date</h5>
-                            <!-- Departure -->
-                            <input type="datetime-local" name="Dep_Time" id="Dep_Time" required="required">
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <br>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Arrival Date</h5>
-                            <!-- Arrival -->
-                            <input type="datetime-local" name="Arrival_Time" id="Arrival_Time" required="required">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Which Airline you want to travel?</h5>
+                        <!-- Airline -->
+                        <input type="text" name = "abc" placeholder="abc">
+                         <h5 class="card-title">Please mention the source?</h5>
+                        <!-- Source -->
+                        <input type="text" name = "abc" placeholder="abc">
+                        <h5 class="card-title">Please mention the Destination?</h5>
+                        <!-- Destination -->
+                        <input type="text" name = "abc" placeholder="abc">
+                        <h5 class="card-title">Please mention the Total_Stops?</h5>
+                        <!-- Total_Stops -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
 
-            <br>
-            <br>
-            <br>
+                        <h5 class="card-title">Please mention the Journey_day'?</h5>
+                        <!-- Journey_day' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- Source -->
-                            <h5 class="card-title">Source</h5>
-                            <select name="Source" id="Source" required="required">
-                                <option value="Delhi">Delhi</option>
-                                <option value="Kolkata">Kolkata</option>
-                                <option value="Mumbai">Mumbai</option>
-                                <option value="Chennai">Chennai</option>
-                                <option value="Banglore">Banglore</option>
+                        <h5 class="card-title">Please mention the Journey_month'?</h5>
+                        <!-- Journey_month' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the Journey_year'?</h5>
+                        <!-- Journey_year' -->
+                        <input type="number" name="abc" min="0" max="2024" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the hours'?</h5>
+                        <!-- hours' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the minutes'?</h5>
+                        <!-- minutes' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the Arrival_hour'?</h5>
+                        <!-- Arrival_hour' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the  Arrival_min'?</h5>
+                        <!--  Arrival_min' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the duration_hours'?</h5>
+                        <!-- duration_hours' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <h5 class="card-title">Please mention the duration_mins'?</h5>
+                        <!-- duration_mins' -->
+                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                    
 
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Destination</h5>
-                            <!-- Destination -->
-                            <select name="Destination" id="Destination" required="required">
-                                <option value="Cochin">Cochin</option>
-                                <option value="Delhi">Delhi</option>
-                                <option value="New Delhi">New Delhi</option>
-                                <option value="Hyderabad">Hyderabad</option>
-                                <option value="Kolkata">Kolkata</option>
-                                <option value="Banglore">Banglore</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <br>
-            <br>
-            <br>
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Stopage</h5>
-                            <!-- Total Stops -->
-                            <select name="Total_Stops" required="required">
-                                <option value="0">Non-Stop</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Which Airline you want to travel?</h5>
-                            <!-- Airline -->
-                            <select name="airline" id="airline" required="required">
-                                <option value="Jet Airways">Jet Airways</option>
-                                <option value="IndiGo">IndiGo</option>
-                                <option value="Air India">Air India</option>
-                                <option value="Multiple carriers">Multiple carriers</option>
-                                <option value="SpiceJet">SpiceJet</option>
-                                <option value="Vistara">Vistara</option>
-                                <option value="Air Asia">Air Asia</option>
-                                <option value="GoAir">GoAir</option>
-                                <option value="Multiple carriers Premium economy">Multiple carriers Premium economy
-                                </option>
-                                <option value="Jet Airways Business">Jet Airways Business</option>
-                                <option value="Vistara Premium economy">Vistara Premium economy</option>
-                                <option value="Trujet">Trujet</option>
-                            </select>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -159,14 +99,28 @@
 
         <br>
         <br>
-        <h3>{{  THE  prediction is {{results}} }}</h3>
+        <h3>{{ results}}</h3>
 
         <br>
         <br>
-        <p>©2020 Debojit Mandal</p>
+        <p>Debojit Mandal</p>
 
     </div>
 
 
 
 
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
