--- a/templates/home.html
+++ b/templates/home.html
@@ -41,47 +41,58 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
+
                         <h5 class="card-title">Which Airline you want to travel?</h5>
                         <!-- Airline -->
-                        <input type="text" name = "abc" placeholder="abc">
+                        <input type="text" name = "Airline" placeholder="abc">
+
                          <h5 class="card-title">Please mention the source?</h5>
                         <!-- Source -->
-                        <input type="text" name = "abc" placeholder="abc">
+                        <input type="text" name = "Source" placeholder="abc">
+
                         <h5 class="card-title">Please mention the Destination?</h5>
                         <!-- Destination -->
-                        <input type="text" name = "abc" placeholder="abc">
+                        <input type="text" name = "Destination" placeholder="abc">
+
                         <h5 class="card-title">Please mention the Total_Stops?</h5>
                         <!-- Total_Stops -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="Total_Stops" min="0" max="100" step="1" placeholder="Enter a number">
 
                         <h5 class="card-title">Please mention the Journey_day'?</h5>
                         <!-- Journey_day' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="Journey_day" min="0" max="100" step="1" placeholder="Enter a number">
 
                         <h5 class="card-title">Please mention the Journey_month'?</h5>
                         <!-- Journey_month' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="Journey_month" min="0" max="100" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the Journey_year'?</h5>
                         <!-- Journey_year' -->
-                        <input type="number" name="abc" min="0" max="2024" step="1" placeholder="Enter a number">
+                        <input type="number" name="Journey_year" min="0" max="2024" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the hours'?</h5>
                         <!-- hours' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="hours" min="0" max="100" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the minutes'?</h5>
                         <!-- minutes' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="minutes" min="0" max="100" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the Arrival_hour'?</h5>
                         <!-- Arrival_hour' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="Arrival_hour" min="0" max="100" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the  Arrival_min'?</h5>
                         <!--  Arrival_min' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="Arrival_min" min="0" max="100" step="1" placeholder="Enter a number">
+
                         <h5 class="card-title">Please mention the duration_hours'?</h5>
                         <!-- duration_hours' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="duration_hours" min="0" max="100" step="1" placeholder="Enter a number">
+                        
                         <h5 class="card-title">Please mention the duration_mins'?</h5>
                         <!-- duration_mins' -->
-                        <input type="number" name="abc" min="0" max="100" step="1" placeholder="Enter a number">
+                        <input type="number" name="duration_mins" min="0" max="100" step="1" placeholder="Enter a number">
                     
 
                     </div>
